--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h3>Cart</h3>
             </div>
             <div class="main"><span class="material-symbols-outlined">
-                    orders
+                    ordersss
                 </span>
                 <h3>Order</h3>
             </div>
